--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,9 +5,9 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.35MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.28MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇫🇷 法国-897.1KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇬🇧 英国-1.69MB/s(Youtube:不良林), server: 152.89.210.105, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
+  - {name: 🇺🇸 美国-2.83MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-197.3KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇺🇸 美国-517.1KB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇨🇳 中国-368.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
 proxy-groups:
@@ -16,9 +16,9 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-897.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
+      - 🇫🇷 法国-197.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-517.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-368.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -26,9 +26,9 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-897.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
+      - 🇫🇷 法国-197.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-517.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-368.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -37,25 +37,24 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-897.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
+      - 🇫🇷 法国-197.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-517.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-368.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.28MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-897.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
+      - 🇫🇷 法国-197.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-517.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-368.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -63,9 +62,9 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-897.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
+      - 🇫🇷 法国-197.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-517.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-368.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -74,9 +73,9 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-897.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
+      - 🇫🇷 法国-197.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-517.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-368.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -94,9 +93,9 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-897.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
+      - 🇫🇷 法国-197.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-517.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-368.9KB/s(Youtube:不良林)
 rules:
