--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -8,8 +8,8 @@ proxies:
   - {name: 🇬🇧 英国-1.69MB/s(Youtube:不良林), server: 152.89.210.105, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
   - {name: 🇺🇸 美国-2.83MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇫🇷 法国-197.3KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-517.1KB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-368.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-238.1KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-301.7KB/s(Youtube:不良林), server: cdn2.myuuusss.com, port: 20011, type: ss, cipher: aes-128-gcm, password: b195963c-2631-442d-ab3a-6e78df25d904}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -19,8 +19,8 @@ proxy-groups:
       - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-197.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-517.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-368.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -29,8 +29,8 @@ proxy-groups:
       - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-197.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-517.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-368.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -40,8 +40,8 @@ proxy-groups:
       - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-197.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-517.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-368.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -55,8 +55,8 @@ proxy-groups:
       - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-197.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-517.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-368.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
@@ -65,8 +65,8 @@ proxy-groups:
       - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-197.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-517.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-368.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -76,8 +76,8 @@ proxy-groups:
       - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-197.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-517.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-368.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -96,8 +96,8 @@ proxy-groups:
       - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-197.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-517.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-368.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
