--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-1.69MB/s(Youtube:不良林), server: 152.89.210.105, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
-  - {name: 🇺🇸 美国-2.83MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-197.3KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇨🇳 中国-238.1KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-4.29MB/s(Youtube:不良林), server: v1hugang5.kuli888.xyz, port: 10028, type: trojan, password: 0c987039-dad5-3c6a-b7a5-21444e2eddae, sni: v1hugang5.kuli888.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: xjp.ziqiyun.xyz, port: 443, type: trojan, password: 7b561e94-42f3-4f92-979c-4cf97c328025, sni: xjp.ziqiyun.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-301.7KB/s(Youtube:不良林), server: cdn2.myuuusss.com, port: 20011, type: ss, cipher: aes-128-gcm, password: b195963c-2631-442d-ab3a-6e78df25d904}
+  - {name: 🇨🇳 中国-4.31MB/s(Youtube:不良林), server: shcu.alinkrelay.com, port: 44608, type: trojan, password: 673c8e50-d1c4-4e1f-ae6f-3c694e769006, sni: shcu.alinkrelay.com, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-413.9KB/s(Youtube:不良林), server: 144.91.109.75, port: 443, type: ss, cipher: chacha20-ietf-poly1305, password: revC4XzAemkX}
+  - {name: 🇩🇪 德国-687.2KB/s(Youtube:不良林), server: 144.91.109.71, port: 443, type: ss, cipher: chacha20-ietf-poly1305, password: V8stXKscUpkN}
+  - {name: 🇨🇳 中国-357.9KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇬🇧 英国-499.9KB/s(Youtube:不良林), server: 152.89.210.105, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇺🇸 美国-2.32MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
-      - 🇫🇷 法国-197.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-301.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-413.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-687.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-499.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
-      - 🇫🇷 法国-197.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-301.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-413.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-687.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-499.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
-      - 🇫🇷 法国-197.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-301.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-413.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-687.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-499.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
-      - 🇫🇷 法国-197.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-301.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-413.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-687.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-499.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
-      - 🇫🇷 法国-197.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-301.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-413.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-687.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-499.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
-      - 🇫🇷 法国-197.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-301.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-413.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-687.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-499.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
-      - 🇫🇷 法国-197.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-301.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-413.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-687.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-499.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
