--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,117 +5,81 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.32MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇳 中国-4.94MB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
-  - {name: 🇭🇰 香港-6.90MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.31MB/s(Youtube:不良林), server: v1shengang.kuli888.xyz, port: 52016, type: trojan, password: 0c987039-dad5-3c6a-b7a5-21444e2eddae, sni: v1shengang.kuli888.xyz, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-822.9KB/s(Youtube:不良林), server: 144.91.109.75, port: 443, type: ss, cipher: chacha20-ietf-poly1305, password: revC4XzAemkX}
-  - {name: 🇭🇰 香港-7.96MB/s(Youtube:不良林), server: 20.187.100.205, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-5.82MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.23MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.86MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-9.95MB/s(Youtube:不良林), server: 20.187.100.205, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-10.10MB/s(Youtube:不良林), server: 20.187.100.205, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.11MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-1.59MB/s(Youtube:不良林), server: v1hugang5.kuli888.xyz, port: 10028, type: trojan, password: 0c987039-dad5-3c6a-b7a5-21444e2eddae, sni: v1hugang5.kuli888.xyz, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-817.5KB/s(Youtube:不良林), server: 144.91.109.71, port: 443, type: ss, cipher: chacha20-ietf-poly1305, password: V8stXKscUpkN}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-822.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-7.96MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.10MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-817.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-822.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-7.96MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.10MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-817.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-822.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-7.96MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.10MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-817.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-6.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-7.96MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.82MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.10MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-822.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-7.96MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.10MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-817.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-822.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-7.96MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.10MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-817.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-822.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-7.96MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.10MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-817.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,16 +95,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-822.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-7.96MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.10MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-817.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
